--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
 	annotationProcessor "org.projectlombok:lombok:1.18.16"
 
+	//apache common
+	implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
 }
 
 test {
